\name{NEWS}
\title{aquamet News}
\section{CHANGES in aquamet VERSION 2.5.8 (Released 2024-02-23)}{
  \subsection{BUG FIXES}{
    \itemize{
      \item Added check to habitat indicator functions to ensure 
      variables provided in arguments are present in dataset. 
    }
  }
}
\section{CHANGES in aquamet VERSION 2.5.7 (Released 2024-01-03)}{
  \subsection{BUG FIXES}{
    \itemize{
      \item Corrected input for transect spacing to nrsaGeneral() example and 
      did the same in the vignette to produce correct reachlen metric.
    }
  }
}
\section{CHANGES in aquamet VERSION 2.5.6 (Released 2023-12-28)}{
  \subsection{BUG FIXES}{
    \itemize{
      \item Corrected calculations in nlaBottomSubstrate.r and 
      nlaShorelineSubstrate.r.
    }
  }
}

\section{CHANGES IN aquamet VERSION 2.5.0 (Released 2018-01-25)}{
  \subsection{NEW FEATURES}{
      \itemize{
        \item Updated assignDistinct function to work more broadly across
        other datasets.
        
        \item Added functions to calculate NRSA physical habitat indicators.
      }
    }
}

\section{CHANGES IN aquamet VERSION 2.4.6 (Released 2017-08-30)}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Added functions to calculate NLA physical habitat indicators. 
      
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item None.
    }
  }
}
\section{CHANGES IN aquamet VERSION 2.4 (Released 2016-11-01)}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Rewrote \code{fishMet} and \code{invertMet} into several functions which each calculate 
      a subset of metrics. Added functions to calculate NRSA multimetric indices (MMIs) and just the 
      metrics included in the MMIs. Added flexibility in input variable names for all functions. Added
      vignettes and improved documentation.
      
      \item Modified and renamed physical habitat functions for NRSA to allow total flexibility in naming